--- a/Docs/TODO.txt
+++ b/Docs/TODO.txt
@@ -16,3 +16,6 @@ TO do list:
 
 -change password Pagina
 -edit forms gebasseerd op permissies
+-Database populatie statische elementen (state's, provincies, juridische entiteiten...., schrijf dit in een migration)
+-Database migratie (oude data in onze database)
+-Markup Forms (zie registreer form en wat er nog aangepast aann moet worden)
